--- a/Dockerfile.analytics
+++ b/Dockerfile.analytics
@@ -8,7 +8,7 @@ ADD . /build
 WORKDIR /build
 
 # Generate a binary
-RUN CGO_ENABLED=0 go build -o main ./cmd/analytics/.
+RUN CGO_ENABLED=0 go build -mod=mod -o main ./cmd/analytics/.
 
 FROM scratch
 # the tls certificates:
